--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Historical fiction'
 - !lcsh 'Zulu Rebellion, 1906 -- Fiction'
 - !lcsh 'South Africa -- Fiction'
+- GITenberg
 title: 'Forging the Blades: A Tale of the Zulu Rebellion'
 url: http://www.gutenberg.org/ebooks/32567
